Refactoring and more swagger documentation
